@@ -1,8 +1,8 @@
 (* camlp5r pa_macro.cmo pa_extend.cmo *)
-(* $Id: pcaml.ml,v 1.70 2010/02/19 10:13:51 deraugla Exp $ *)
+(* $Id: pcaml.ml,v 1.71 2010/04/28 17:05:07 deraugla Exp $ *)
 (* Copyright (c) INRIA 2007-2010 *)
 
-value version = "5.14-exp";
+value version = "5.14";
 value syntax_name = ref "";
 
 value gram =
