@@ -1049,14 +1049,14 @@ and class_str_item c l =
   match c with
     CrCtr (loc, t1, t2) -> Pcf_cstr (ctyp t1, ctyp t2, mkloc loc) :: l
   | CrDcl (loc, cl) -> List.fold_right class_str_item (uv cl) l
-  | CrInh (loc, ce, pb) -> Pcf_inher (class_expr ce, uv pb) :: l
+  | CrInh (loc, ce, pb) -> Pcf_inher (Fresh, class_expr ce, uv pb) :: l
   | CrIni (loc, e) -> Pcf_init (expr e) :: l
   | CrMth (loc, s, b, e, t) ->
       let t = option (fun t -> ctyp (mkpolytype t)) (uv t) in
       let e = mkexp loc (Pexp_poly (expr e, t)) in
-      Pcf_meth (uv s, mkprivate (uv b), e, mkloc loc) :: l
+      Pcf_meth (uv s, mkprivate (uv b), Fresh, e, mkloc loc) :: l
   | CrVal (loc, s, b, e) ->
-      Pcf_val (uv s, mkmutable (uv b), expr e, mkloc loc) :: l
+      Pcf_val (uv s, mkmutable (uv b), Fresh, expr e, mkloc loc) :: l
   | CrVir (loc, s, b, t) ->
       Pcf_virt (uv s, mkprivate (uv b), ctyp (mkpolytype t), mkloc loc) :: l
 ;;
